# ibex-banks-rnn-forecast

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cache/macro/: MACRO_ECB_Deposit_Rate.csv  MACRO_IBEX_Close.csv  MACRO_Inflation_HICP_EA.csv
config/: data.yml  exogenous_events.yml
docs/: YFinance_Explained.md
logs/: data_lineage.jsonl
notebooks/: 01_eda_series.ipynb  02_exogenous_design.ipynb  03_compare_rnn_lstm_gru.ipynb
reports/app_bundle/BBVA.MC/bbva_20251112_041710/: manifest.json
reports/app_bundle/BBVA.MC/bbva_20251112_041710/data/: BBVA.MC_forecast_next.csv  BBVA.MC_full_data.csv  BBVA.MC_metrics_test.csv  BBVA.MC_metrics_test.json  BBVA.MC_test_predictions.csv
reports/app_bundle/BBVA.MC/bbva_20251112_041710/meta/: config.json
reports/app_bundle/BBVA.MC/bbva_20251112_041710/scalers/: scaler_X_BBVA.MC.joblib  scaler_y_BBVA.MC.joblib
reports/app_bundle/SAN.MC/san_20251112_005613/: manifest.json
reports/app_bundle/SAN.MC/san_20251112_005613/data/: SAN.MC_forecast_next.csv  SAN.MC_full_data.csv  SAN.MC_metrics_test.csv  SAN.MC_metrics_test.json  SAN.MC_test_predictions.csv
reports/app_bundle/SAN.MC/san_20251112_005613/meta/: config.json
reports/app_bundle/SAN.MC/san_20251112_005613/scalers/: scaler_X_SAN.MC.joblib  scaler_y_SAN.MC.joblib
reports/app_bundle/SAN.MC/san_20251112_011300/: manifest.json
src/data/: build_exogenous.py  load_raw.py  normalize_csv.py  validate_integrity.py
src/eda/: run_eda.py
src/utils/: config.py  io_utils.py  logging_utils.py  time_utils.py
tests/: smoke_gpu_pt.py  smoke_gpu_tf.py
(+7 files in other folders)
